# discord-telegram-forwarder

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  rules.yaml
.local/: sync_topics.py
docs/: installation.md  safe-public-release-workflow.md
scripts/: audit_history.py
src/: LoggerManager.py  __init__.py  bridge_client.py  config.py  formatter.py  health.py  main.py  media.py  models.py  router.py  state.py  tg_sender.py
tests/: test_audit_history.py  test_bridge_health_logging.py  test_pipeline_qa.py  test_pipeline_stages.py  test_rich_messages.py  test_router_formatter.py  test_rule_topic_state.py  test_sender.py  test_state_media.py  test_state_topic.py  test_sync_topics_script.py  test_topic_sync_sender.py  test_validation.py
typings/loguru/: __init__.pyi
typings/pytest/: __init__.pyi
